[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["dragontiger95"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
pytest = "^8.3.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
